fixed the services nav item scrollbar issue

--- a/scss/modules/_services.scss
+++ b/scss/modules/_services.scss
@@ -9,7 +9,6 @@ $cardColors: (
 );
 
 .services{
-    overflow-x:hidden;
     .container{
         margin-bottom:50px;
     }
